--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react": "^16.5.0",
     "react-bootstrap-switch": "15.5.3",
     "react-chartjs-2": "2.7.4",
+    "react-color": "^2.17.0",
     "react-datetime": "2.16.3",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.4.0",
     "react-scripts": "^2.1.8",
+    "reactcss": "^1.2.3",
     "reactstrap": "7.1.0"
   },
   "meteor": {
