--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "colla-color",
   "private": true,
   "scripts": {
+    "heroku-prebuild": "meteor npm install && meteor reset",
     "start": "meteor run",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
